<resources>
    <string name="app_name">OCRClientDemo</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="action_bind">Bind</string>
    <string name="action_unbind">Unbind</string>
    <string name="action_ocr">OCR</string>
    <string name="remote_service_started">remote_service_started</string>
    <string name="remote_service_stopped">remote_service_stopped</string>
    <string name="local_service_label">local_service_label</string>
    <string name="remote_service_connected">remote_service_connected</string>
    <string name="remote_service_disconnected">remote_service_disconnected</string>
    <string name="servicePackageName">co.celloscope.services</string>
    <string name="serviceFullyQualifiedClassName">co.celloscope.services.OCRService</string>
    <string name="action_connect">Connect</string>
    <string name="action_register">Register</string>
    <string name="action_unregister">Unregister</string>
    <string name="action_disconnect">Disconnect</string>

</resources>
